--- a/package.json
+++ b/package.json
@@ -1,24 +1,37 @@
 {
   "name": "gatsby-plugin-iterable",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Gatsby plugin for Iterable's Javascript SDK",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "author": "@julianmclain",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/julianmclain/gatsby-plugin-iterable.git"
   },
-  "keywords": [
-    "Iterable",
-    "Gatsby",
-    "Email Marketing"
-  ],
-  "author": "@julianmclain",
-  "license": "MIT",
+  "homepage": "https://github.com/julianmclain/gatsby-plugin-iterable#readme",
   "bugs": {
     "url": "https://github.com/julianmclain/gatsby-plugin-iterable/issues"
   },
-  "homepage": "https://github.com/julianmclain/gatsby-plugin-iterable#readme"
+  "keywords": [
+    "iterable",
+    "iterable javascript",
+    "gatsby",
+    "gatsby plugin",
+    "email marketing"
+  ],
+  "main": "index.js",
+  "scripts": {
+    "build": "babel src --out-dir .",
+    "watch": "babel -w src --out-dir ."
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "babel-preset-gatsby-package": "^0.4.1"
+  },
+  "peerDependencies": {
+    "gatsby": "^2.0.0",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2"
+  }
 }
