Add keywords for plugin library

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "iterable",
     "iterable javascript",
     "gatsby",
-    "gatsby plugin",
+    "gatsby-plugin",
     "email marketing"
   ],
   "main": "index.js",
