--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
   ],
   "main": "index.js",
   "scripts": {
-    "build": "babel src --out-dir .",
-    "watch": "babel -w src --out-dir ."
+    "build": "babel src --out-dir . --ignore \"**/__tests__\"",
+    "watch": "babel -w src --out-dir .  --ignore \"**/__tests__\"",
+    "test": "jest"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.6",
-    "babel-preset-gatsby-package": "^0.4.1"
+    "babel-preset-gatsby-package": "^0.4.1",
+    "jest": "^26.4.0"
   },
   "peerDependencies": {
     "gatsby": "^2.0.0",
