--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.6",
     "babel-preset-gatsby-package": "^0.4.1",
+    "react": "^16.4.2",
     "jest": "^26.4.0"
   },
   "peerDependencies": {
